[package]
name = "usage"
version = "0.1.0"
edition = "2021"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
license = "MPL-2.0"
description = "Example: usage of alterable_logger"

[dependencies]
log = {version = "0.4.20", features = ["std"]}
alterable_logger = {path = "../.."}
simplelog = "0.12.1"
